@@ -7,7 +7,10 @@ export(all_in)
 export(apply_minmax_scale)
 export(apply_quantile_scale)
 export(apply_uniform_scale)
+export(calculate_arithmetic_mean)
 export(calculate_distance)
+export(calculate_geometric_mean)
+export(calculate_harmonic_mean)
 export(check_packages)
 export(correlation_distance)
 export(euclidean_distance)
